[package]
name = "vokra-backend-webgpu"
description = "Vokra WebGPU backend (browser WASM): raw #[link(wasm_import_module)] extern-import shim + hand-written JS glue driving the browser navigator.gpu API — NO binding crate (no wgpu / wasm-bindgen / web-sys / js-sys) — with WGSL compute kernels embedded as text (include_str!, SHA-256-pinned). The import-object resolution at instantiate time is the WASM equivalent of the dlopen runtime-linking model the Metal / CUDA / Vulkan backends use; the workspace stays dependency-free (NFR-DS-02). ADR M4-01-webgpu-wasm."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Zero external dependencies (NFR-DS-02): the only runtime dependency is the
# first-party `vokra-core` (Backend trait / OpKind / VokraError / Tensor).
# The browser WebGPU implementation is reached through wasm imports that the
# hand-written JS glue (glue/vokra_webgpu.js) satisfies at instantiate time;
# nothing is linked at build time and no binding crate is used, so the root
# Cargo.lock keeps only `vokra-*` crates (scripts/check-zero-deps.sh).
#
# The `webgpu` feature mirrors the `metal` / `cuda` / `vulkan` opt-in pattern:
# the extern-import FFI compiles only under
# `cfg(all(feature = "webgpu", target_arch = "wasm32"))`; a default build (or
# any native target) reduces to explicit BackendUnavailable stubs
# (FR-EX-08 — never a silent CPU substitute).
[features]
default = []
# Opt-in for the raw wasm extern-import FFI. Even with this feature enabled,
# on non-wasm32 targets the crate stays an explicit BackendUnavailable stub
# (there is no `navigator.gpu` to import outside a JS host).
webgpu = []

[dependencies]
vokra-core.workspace = true

# Test-only differential oracle: the CPU kernels are the reference the WGSL
# kernels are checked against (per-kernel in the browser harness; the
# formula-transcription pins in src/plan.rs run natively). First-party
# `vokra-*` crate — the zero-dependency invariant of the root Cargo.lock is
# untouched.
[dev-dependencies]
vokra-backend-cpu.workspace = true

[lints]
workspace = true
