[package]
name = "vokra-capi"
description = "C ABI surface of the Vokra runtime (cbindgen-generated header; extern \"C\" API lands in M0-09)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
# Output name unified to `vokra` (M0-09-T02): libvokra.dylib / libvokra.so /
# vokra.dll (cdylib) and libvokra.a (staticlib). The Rust crate is therefore
# `use vokra::...` from the integration tests.
name = "vokra"
# C ABI artifacts (M0-02-T02): a shared library for dynamic consumers and a
# static library for iOS (`DllImport("__Internal")`, NFR-RL-03) / static
# embedding. `lib` (rlib) is also emitted so the Rust integration tests under
# `tests/` can link the crate and call the extern "C" functions directly
# (M0-09-T06..T09); it does not affect the C-facing artifacts.
# The `staticlib` slot is also the iOS XCFramework pipeline output
# (M2-02 / ADR-0004 iOS build design): `cargo build --target
# aarch64-apple-ios[-sim] -p vokra-capi` emits `libvokra.a`, which is then
# assembled into `Vokra.xcframework` by `scripts/build-ios.sh` and consumed by
# `Package.swift` as a `binaryTarget`. Do not remove `staticlib`.
crate-type = ["lib", "cdylib", "staticlib"]
# The C ABI examples live in the cbindgen-generated header and the C smoke
# tests (tests/capi), not in rustdoc, so doctests stay disabled.
doctest = false

[dependencies]
vokra-core.workspace = true
# Native model implementations (Silero VAD / Whisper / piper-plus). The C ABI
# builds the matching engine from the GGUF arch and injects it into a Session
# (M0-09-T06). Runtime dep, unlike cbindgen which is a build-only CLI tool
# (MPL-2.0, not a workspace dependency — see ADR-0003 / license-audit.md).
vokra-models.workspace = true
# M4-03: the `vokra_aec_*` surface wraps vokra_ops::Aec (SpeexDSP MDF port)
# plus the vokra-core far-end reference queue. Workspace-internal dependency
# (NFR-DS-02 zero-dep unchanged).
vokra-ops.workspace = true

[features]
# --------------------------------------------------------------------------
# CPU-only audit-trail (M2-11-T13 / plan §R3, Reviewer 3).
#
# The Unity UPM package ships a CPU-only cdylib to guarantee no NVIDIA
# runtime linkage sneaks into the shipped Unity binaries (NVIDIA EULA
# compliance, CLAUDE.md). The CI job under `.github/workflows/ci.yml` calls
# `cargo build --release -p vokra-capi --no-default-features --features cpu`
# so the feature name has to exist even though the underlying model crate
# already has all GPU backends off by default (`vokra-models/metal` and
# `vokra-models/cuda` are opt-in). Empty stub: the feature carries no
# transitive activations, it just names the CPU-only build for the audit
# trail. Do not add `= ["vokra-models/metal", ...]` here — that would be
# the exact anti-pattern this feature is documenting the absence of.
# --------------------------------------------------------------------------
cpu = []
# Explicit no-op default so `--no-default-features` on the audit-trail
# build does not need to be paired with anything else — the CPU-only
# build is the default shape.
default = []

[lints]
workspace = true
