[package]
name = "vokra-cli"
description = "Vokra umbrella CLI (M1-10a; FR-TL-*, NFR-PF-13): `run` loads a GGUF and runs VAD/ASR/TTS through the public session/model APIs, `convert` delegates to the offline vokra-convert library, and `bench` measures RTF / TTFA / jitter / p50-p95-p99 with a relative (>5%) regression gate against a committed baseline JSON. std-only, zero external deps (NFR-DS-02)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Zero external dependencies (NFR-DS-02): every dependency is a first-party
# `vokra-*` crate. `vokra-convert` is pulled in (by path — it is not exposed as a
# workspace dependency) only so `vokra-cli convert` can delegate to its offline
# library; this embeds the ONNX/protobuf-parsing code in the CLI binary, which is
# fine because the CLI is NOT the shipped runtime artifact (the libvokra cdylib in
# vokra-capi stays clean and covered by the <10 MB size gate). The `run` path uses
# the public session/model APIs directly (Session + WhisperAsr/SileroVadV5/
# PiperPlusTts) and never loads ONNX (FR-LD-05).
[dependencies]
vokra-core.workspace = true
vokra-models.workspace = true
vokra-ops.workspace = true
vokra-convert = { path = "../vokra-convert" }
# M4 cc-06: session GGUFs open through the true-mmap loader (header pages
# faulted lazily) instead of a whole-file owned read — on the Moshi full-7B
# GGUF the old `Session::from_file` buffered ~14.3 GiB alongside the engine's
# own mmap. First-party, zero external deps (NFR-DS-02 preserved).
vokra-mmap = { path = "../vokra-mmap" }

# Optional GPU backends for `bench --backend metal|cuda` (RTF on a real GPU).
# Both are first-party `vokra-*` crates pulled through `vokra-models`, so the
# zero-external-dependency invariant (NFR-DS-02) is preserved; they are OFF by
# default so the stock CLI stays CPU-only and cross-builds everywhere.
[features]
metal = ["vokra-models/metal"]
cuda = ["vokra-models/cuda"]
# M4-15-T02: CPU + Vulkan-only build target (`--no-default-features
# --features vulkan`, ADR M4-15 §(a)). Symmetric with `metal` / `cuda` above;
# `bench --backend vulkan` already parses to `BackendKind::Vulkan`. The
# transitive `vokra-models/vulkan` forwards to the backend crate's raw-FFI
# feature, so the dlopen path compiles on Linux / Android / Windows while the
# stock CLI stays CPU-only (feature OFF by default) and the root Cargo.lock
# stays vokra-*-only (NFR-DS-02).
vulkan = ["vokra-models/vulkan"]

# dev-only: M2-08 T14 policy e2e test uses `vokra-eval::check_degradation` for
# the NFR-QL-02 5% gate; `vokra-eval` is a first-party `vokra-*` crate with no
# external deps of its own, so the NFR-DS-02 zero-dep invariant is preserved.
[dev-dependencies]
vokra-eval = { path = "../vokra-eval" }

[lints]
workspace = true
