[package]
name = "vokra-models"
description = "Native (whisper.cpp-style) model implementations for Vokra: Silero VAD, Whisper base, piper-plus MB-iSTFT-VITS2 native TTS, ..."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
vokra-core.workspace = true
vokra-ops.workspace = true
# M0-06 reuses the M0-08 CPU compute kernels (gemm / softmax / layer_norm /
# gelu / conv1d) and the runtime ISA log directly, rather than re-implementing
# them in the model layer. Native model forwards call these safe wrappers.
vokra-backend-cpu.workspace = true
# M1-01-A: the G2P reuse boundary. `PiperPlusTts::synthesize_with` accepts an
# injected `Phonemizer` (the trait + Mock/Passthrough live here); the real
# 8-language G2P is reused OUT of the workspace, so this stays a first-party
# `vokra-*` dependency and the zero-dependency gate is preserved (NFR-DS-02).
vokra-piper-plus.workspace = true
# Phase 3 (GPU execution): the imperative `Compute` dispatcher routes the model
# hot path (GEMM first) onto the Metal backend. `vokra-backend-metal` is a
# first-party `vokra-*` crate with ZERO external deps (raw Objective-C / Metal
# FFI, no binding crate), so the zero-dependency gate (NFR-DS-02) still holds; it
# is nonetheless kept OPTIONAL behind the `metal` feature so Linux / Windows /
# WASM builds never even name it (NFR-PT-01). The `Compute::Metal` arm is
# additionally `cfg(target_os = "macos"/"ios")`-gated inside the crate.
vokra-backend-metal = { workspace = true, optional = true }

[features]
# Off by default: enable with `--features metal` on macOS / iOS to route the
# model GEMM hot path onto the GPU (and to build/run the Metal parity tests).
metal = ["dep:vokra-backend-metal"]

# M1-01-D: reference RTF bench for the piper-plus native TTS (hand-rolled
# std::time measurement, no external bench crate — NFR-DS-02). It is env-gated
# on VOKRA_PIPER_GGUF and asserts nothing; the <0.5 RTF confirmation is M1-01-F
# (real hardware + a converted voice). Run with `cargo bench -p vokra-models`.
[[bench]]
name = "piper_rtf"
harness = false

[lints]
workspace = true
