[package]
name = "vokra-models"
description = "Native (whisper.cpp-style) model implementations for Vokra: Silero VAD, Whisper base, piper-plus MB-iSTFT-VITS2 native TTS, ..."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
vokra-core.workspace = true
vokra-ops.workspace = true
# M0-06 reuses the M0-08 CPU compute kernels (gemm / softmax / layer_norm /
# gelu / conv1d) and the runtime ISA log directly, rather than re-implementing
# them in the model layer. Native model forwards call these safe wrappers.
vokra-backend-cpu.workspace = true
# M1-01-A: the G2P reuse boundary. `PiperPlusTts::synthesize_with` accepts an
# injected `Phonemizer` (the trait + Mock/Passthrough live here); the real
# 8-language G2P is reused OUT of the workspace, so this stays a first-party
# `vokra-*` dependency and the zero-dependency gate is preserved (NFR-DS-02).
vokra-piper-plus.workspace = true
# Phase 3 (GPU execution): the imperative `Compute` dispatcher routes the model
# hot path (GEMM first) onto the Metal backend. `vokra-backend-metal` is a
# first-party `vokra-*` crate with ZERO external deps (raw Objective-C / Metal
# FFI, no binding crate), so the zero-dependency gate (NFR-DS-02) still holds; it
# is nonetheless kept OPTIONAL behind the `metal` feature so Linux / Windows /
# WASM builds never even name it (NFR-PT-01). The `Compute::Metal` arm is
# additionally `cfg(target_os = "macos"/"ios")`-gated inside the crate.
vokra-backend-metal = { workspace = true, optional = true }
# Phase 3 (GPU execution), CUDA arm: the imperative `Compute` dispatcher can
# route the model GEMM hot path onto the CUDA backend. `vokra-backend-cuda` is a
# first-party `vokra-*` crate with ZERO external deps (raw CUDA Driver API +
# NVRTC FFI loaded at runtime via dlopen — NO cudarc/cust/rustacuda binding
# crate, and no CUDA library bundled/linked, NVIDIA EULA install model), so the
# zero-dependency gate (NFR-DS-02) still holds; it is kept OPTIONAL behind the
# `cuda` feature so default builds never even name it (NFR-PT-01). The
# `Compute::Cuda` arm is additionally `cfg(any(unix, windows))`-gated inside this
# crate (CUDA needs a dynamic loader).
vokra-backend-cuda = { workspace = true, optional = true }
# Phase 3 (GPU execution), Vulkan arm: symmetric with the Metal / CUDA arms —
# an OPTIONAL first-party dep behind the `vulkan` feature, so default builds
# never even name it (NFR-PT-01). `vokra-backend-vulkan` is a first-party
# `vokra-*` crate with ZERO external deps (raw Vulkan API FFI loaded at runtime
# via dlopen — NO ash / vulkano / erupt binding crate, no libvulkan bundled),
# so the zero-dependency gate (NFR-DS-02) still holds. The `Compute::Vulkan`
# arm is additionally cfg-gated on Linux / Android / Windows targets inside
# this crate (Vulkan is not a macOS / iOS backend — those use Metal). In the
# M3-02 foundation slice the `covered_by_vulkan` set is empty; every hot op
# routed through this feature therefore surfaces as an explicit `UnsupportedOp`
# from `Compute::for_backend` — never a silent CPU fall back (FR-EX-08).
vokra-backend-vulkan = { workspace = true, optional = true }

[dev-dependencies]
# M4-04 T10/T11 (test-only edge, runtime direction untouched): the codec GGUF
# binder roundtrip tests build a synthetic checkpoint, run it through the
# offline vokra-convert library, and bind the result back — proving the
# converter-derived tensors and the runtime binder agree bit-for-bit.
vokra-convert = { path = "../vokra-convert" }

[features]
# Off by default: enable with `--features metal` on macOS / iOS to route the
# model GEMM hot path onto the GPU (and to build/run the Metal parity tests).
metal = ["dep:vokra-backend-metal"]
# Off by default: enable with `--features cuda` (on a Unix/Windows host, GPU not
# required to BUILD — the CUDA/NVRTC libraries are dlopen'd at runtime) to route
# the model GEMM hot path onto the CUDA backend. Real GPU parity/RTF is verified
# on a vast.ai RTX 4090 (M2-03-T25), not in the default CI build.
cuda = ["dep:vokra-backend-cuda"]
# Off by default: enable with `--features vulkan` on Linux / Android / Windows
# to route the model hot path onto the Vulkan backend. In the M3-02 foundation
# slice the Vulkan backend covers no hot op, so any `Compute::for_backend` with
# `BackendKind::Vulkan` currently returns `UnsupportedOp` — never a silent CPU
# fall back. Real GPU parity is verified once the precompiled `.spv` kernels
# land (M4-13-T16, owner).
#
# M4-15-T02 (ADR M4-15 §(a)): the feature also forwards to the backend crate's
# own `vulkan` feature. Before this fix the measured resolution was
# `vokra-backend-vulkan [default]` — the optional dep was activated but its raw
# Vulkan FFI stayed compiled out, so a CPU + Vulkan-only build
# (`--no-default-features --features vulkan` on vokra-capi / vokra-cli) would
# ship a permanent `BackendUnavailable` stub. Forwarding guarantees the dlopen
# FFI path COMPILES in that build target; it still loads libvulkan only at
# runtime (nothing is linked or bundled — NFR-DS-02), and on macOS / iOS the
# backend stays an explicit stub via its target cfg (FR-EX-08, no silent
# fallback either way).
vulkan = ["dep:vokra-backend-vulkan", "vokra-backend-vulkan/vulkan"]

# M1-01-D: reference RTF bench for the piper-plus native TTS (hand-rolled
# std::time measurement, no external bench crate — NFR-DS-02). It is env-gated
# on VOKRA_PIPER_GGUF and asserts nothing; the <0.5 RTF confirmation is M1-01-F
# (real hardware + a converted voice). Run with `cargo bench -p vokra-models`.
[[bench]]
name = "piper_rtf"
harness = false

[lints]
workspace = true
