[package]
name = "vokra-models"
description = "Native (whisper.cpp-style) model implementations for Vokra: Silero VAD, Whisper base, piper-plus MB-iSTFT-VITS2 native TTS, ..."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
vokra-core.workspace = true
vokra-ops.workspace = true
# M0-06 reuses the M0-08 CPU compute kernels (gemm / softmax / layer_norm /
# gelu / conv1d) and the runtime ISA log directly, rather than re-implementing
# them in the model layer. Native model forwards call these safe wrappers.
vokra-backend-cpu.workspace = true
# M1-01-A: the G2P reuse boundary. `PiperPlusTts::synthesize_with` accepts an
# injected `Phonemizer` (the trait + Mock/Passthrough live here); the real
# 8-language G2P is reused OUT of the workspace, so this stays a first-party
# `vokra-*` dependency and the zero-dependency gate is preserved (NFR-DS-02).
vokra-piper-plus.workspace = true
# M4 cc-06 (Moshi full-7B on 16 GB machines): `MoshiEngine::from_path` loads
# through the true-mmap GGUF path (`vokra_mmap::open_gguf`) with mapped-lazy
# temporal blocks, instead of the old fs::read + parse(to_vec) double copy.
# First-party crate, ZERO external deps (raw mmap/MapViewOfFile FFI — no libc /
# memmap2), so the zero-dependency gate (NFR-DS-02) still holds. Promoted from
# dev-dependencies (where the Voxtral real-GGUF gated test already used it).
vokra-mmap = { path = "../vokra-mmap" }
# Phase 3 (GPU execution): the imperative `Compute` dispatcher routes the model
# hot path (GEMM first) onto the Metal backend. `vokra-backend-metal` is a
# first-party `vokra-*` crate with ZERO external deps (raw Objective-C / Metal
# FFI, no binding crate), so the zero-dependency gate (NFR-DS-02) still holds; it
# is nonetheless kept OPTIONAL behind the `metal` feature so Linux / Windows /
# WASM builds never even name it (NFR-PT-01). The `Compute::Metal` arm is
# additionally `cfg(target_os = "macos"/"ios")`-gated inside the crate.
vokra-backend-metal = { workspace = true, optional = true }
# Phase 3 (GPU execution), CUDA arm: the imperative `Compute` dispatcher can
# route the model GEMM hot path onto the CUDA backend. `vokra-backend-cuda` is a
# first-party `vokra-*` crate with ZERO external deps (raw CUDA Driver API +
# NVRTC FFI loaded at runtime via dlopen — NO cudarc/cust/rustacuda binding
# crate, and no CUDA library bundled/linked, NVIDIA EULA install model), so the
# zero-dependency gate (NFR-DS-02) still holds; it is kept OPTIONAL behind the
# `cuda` feature so default builds never even name it (NFR-PT-01). The
# `Compute::Cuda` arm is additionally `cfg(any(unix, windows))`-gated inside this
# crate (CUDA needs a dynamic loader).
vokra-backend-cuda = { workspace = true, optional = true }
# Phase 3 (GPU execution), Vulkan arm: symmetric with the Metal / CUDA arms —
# an OPTIONAL first-party dep behind the `vulkan` feature, so default builds
# never even name it (NFR-PT-01). `vokra-backend-vulkan` is a first-party
# `vokra-*` crate with ZERO external deps (raw Vulkan API FFI loaded at runtime
# via dlopen — NO ash / vulkano / erupt binding crate, no libvulkan bundled),
# so the zero-dependency gate (NFR-DS-02) still holds. The `Compute::Vulkan`
# arm is additionally cfg-gated on Linux / Android / Windows targets inside
# this crate (Vulkan is not a macOS / iOS backend — those use Metal). In the
# M3-02 foundation slice the `covered_by_vulkan` set is empty; every hot op
# routed through this feature therefore surfaces as an explicit `UnsupportedOp`
# from `Compute::for_backend` — never a silent CPU fall back (FR-EX-08).
vokra-backend-vulkan = { workspace = true, optional = true }
# M4-01 (GPU execution), WebGPU arm: symmetric with the Metal / CUDA / Vulkan
# arms — an OPTIONAL first-party dep behind the `webgpu` feature, so default
# builds never even name it (NFR-PT-01). `vokra-backend-webgpu` is a
# first-party `vokra-*` crate with ZERO external deps (raw
# `#[link(wasm_import_module)]` extern-import shim + hand-written JS glue —
# NO wgpu / wasm-bindgen / web-sys binding crate; the import-object
# resolution at instantiate time is the WASM dlopen equivalent), so the
# zero-dependency gate (NFR-DS-02) still holds. The `Compute::WebGpu` arm is
# additionally `cfg(target_arch = "wasm32")`-gated inside this crate
# (WebGPU is reached through browser imports — there is nothing to import
# outside a JS host). A missing adapter / an uncovered op is an explicit
# `BackendUnavailable` / `UnsupportedOp` — never a silent CPU fall back
# (FR-EX-08).
vokra-backend-webgpu = { workspace = true, optional = true }

# Off by default: the CoreML delegate backend (Apple ANE, M5-01) reached behind
# the `coreml` feature. An OPTIONAL first-party dep, so default builds never
# name it (NFR-PT-01). `vokra-backend-coreml` is a first-party `vokra-*` crate
# with ZERO external deps (raw Objective-C / CoreML framework FFI — NO objc /
# objc2 / objc2-core-ml / core-foundation binding crate), so the zero-dependency
# gate (NFR-DS-02) still holds. Its `Compute` arm is additionally
# `cfg(any(target_os = "macos", target_os = "ios"))`-gated. Scaffold slice: no
# op has a wired execution path yet, so `for_backend(CoreMl, …)` returns an
# explicit `UnsupportedOp` (or `BackendUnavailable` with no ANE) — never a
# silent CPU fall back (FR-EX-08). The op path lands after the M5-01-T02 ADR.
vokra-backend-coreml = { workspace = true, optional = true }

[dev-dependencies]
# M4-04 T10/T11 (test-only edge, runtime direction untouched): the codec GGUF
# binder roundtrip tests build a synthetic checkpoint, run it through the
# offline vokra-convert library, and bind the result back — proving the
# converter-derived tensors and the runtime binder agree bit-for-bit.
vokra-convert = { path = "../vokra-convert" }
# M4-05 T25 (test-only edge): the CSM quality gate consumes the M4-18
# degradation gate (MelLoss + AudioMosMetric G2 branch) from vokra-eval —
# first-party, acyclic (vokra-eval depends only on core/ops/backend-cpu),
# root Cargo.lock stays vokra-* only (NFR-DS-02).
vokra-eval = { path = "../vokra-eval" }
# vokra-mmap moved to [dependencies] (M4 cc-06 — MoshiEngine::from_path mmap
# wiring); the Voxtral real-GGUF gated test (tests/voxtral_real_gguf.rs) keeps
# using it from there.

[features]
# Off by default: enable with `--features metal` on macOS / iOS to route the
# model GEMM hot path onto the GPU (and to build/run the Metal parity tests).
metal = ["dep:vokra-backend-metal"]
# Off by default: enable with `--features cuda` (on a Unix/Windows host, GPU not
# required to BUILD — the CUDA/NVRTC libraries are dlopen'd at runtime) to route
# the model GEMM hot path onto the CUDA backend. Real GPU parity/RTF is verified
# on a vast.ai RTX 4090 (M2-03-T25), not in the default CI build.
cuda = ["dep:vokra-backend-cuda"]
# Off by default: enable with `--features vulkan` on Linux / Android / Windows
# to route the model hot path onto the Vulkan backend. In the M3-02 foundation
# slice the Vulkan backend covers no hot op, so any `Compute::for_backend` with
# `BackendKind::Vulkan` currently returns `UnsupportedOp` — never a silent CPU
# fall back. Real GPU parity is verified once the precompiled `.spv` kernels
# land (M4-13-T16, owner).
#
# M4-15-T02 (ADR M4-15 §(a)): the feature also forwards to the backend crate's
# own `vulkan` feature. Before this fix the measured resolution was
# `vokra-backend-vulkan [default]` — the optional dep was activated but its raw
# Vulkan FFI stayed compiled out, so a CPU + Vulkan-only build
# (`--no-default-features --features vulkan` on vokra-capi / vokra-cli) would
# ship a permanent `BackendUnavailable` stub. Forwarding guarantees the dlopen
# FFI path COMPILES in that build target; it still loads libvulkan only at
# runtime (nothing is linked or bundled — NFR-DS-02), and on macOS / iOS the
# backend stays an explicit stub via its target cfg (FR-EX-08, no silent
# fallback either way).
vulkan = ["dep:vokra-backend-vulkan", "vokra-backend-vulkan/vulkan"]
# Off by default: enable with `--features webgpu --target wasm32-unknown-unknown`
# to route the model hot path onto the browser WebGPU backend (M4-01). On any
# non-wasm32 target the feature compiles but the `Compute::WebGpu` arm is
# cfg'd out, so `Compute::for_backend(BackendKind::WebGpu, …)` is an explicit
# `BackendUnavailable` (FR-EX-08 — the WASM CPU/SIMD128 path is only ever the
# caller's explicit `BackendKind::Cpu` choice). Coverage: the six Whisper hot
# ops (Gemm / Gemv / Softmax / LayerNorm / Gelu / Conv1d); the RVQ codec ops
# stay explicit `UnsupportedOp` (same posture as Metal / CUDA).
# (forwards the backend crate's own `webgpu` feature so the extern-import
# context actually compiles on wasm32 — on native targets the backend's
# target gate keeps the explicit-BackendUnavailable stubs.)
webgpu = ["dep:vokra-backend-webgpu", "vokra-backend-webgpu/webgpu"]
# Off by default: enable with `--features coreml` on macOS / iOS to make the
# CoreML delegate backend (Apple ANE, M5-01) selectable through the `Compute`
# seam. In the scaffold slice the backend covers no hot op, so any
# `Compute::for_backend` with `BackendKind::CoreMl` returns an explicit
# `UnsupportedOp` (an ANE-present host) or `BackendUnavailable` (no ANE) —
# never a silent CPU fall back (FR-EX-08). The op-execution path lands after
# the M5-01-T02 model-supply ADR is ratified (owner). On non-Apple targets the
# backend crate's own target gate keeps it an explicit stub.
coreml = ["dep:vokra-backend-coreml"]

# M1-01-D: reference RTF bench for the piper-plus native TTS (hand-rolled
# std::time measurement, no external bench crate — NFR-DS-02). It is env-gated
# on VOKRA_PIPER_GGUF and asserts nothing; the <0.5 RTF confirmation is M1-01-F
# (real hardware + a converted voice). Run with `cargo bench -p vokra-models`.
[[bench]]
name = "piper_rtf"
harness = false

[lints]
workspace = true
