[package]
name = "vokra-ops"
description = "Speech-specialized operators for the Vokra runtime (STFT/iSTFT, Mel, vocoder chains, ... — implemented from M0-04 onwards)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
vokra-core.workspace = true

[lints]
workspace = true
